Correct maven group id

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ sourceSets.main {
 }
 
 dependencies {
-    compile 'net.sf.proguard:proguard-core:7.0.0'
+    compile 'com.guardsquare:proguard-core:7.0.0'
 }
 
 jar {
