Add Gradle wrapper 6.4

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'java'
 }
 
+wrapper {
+    gradleVersion = '6.4'
+    distributionType = Wrapper.DistributionType.ALL
+}
+
 repositories {
     mavenLocal()
     jcenter()
