--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -11,9 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          path: proguard-assembler
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PROGUARD_GITHUB_TOKEN }}
+          repository: Guardsquare/proguard-core
+          path: proguard-core
       - uses: actions/setup-java@v1
         with:
           java-version: 8
       - uses: eskatos/gradle-command-action@v1
         with:
-          arguments: build
+          build-root-directory: proguard-assembler/
+          wrapper-directory: proguard-assembler/
+          arguments: --include-build ../proguard-core/ build
