--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
+    id 'com.github.johnrengelman.shadow'
     id 'distribution'
     id 'java'
     id 'maven-publish'
@@ -38,22 +41,27 @@ dependencies {
     compile 'com.guardsquare:proguard-core:7.0.0'
 }
 
-jar {
-    manifest.from 'src/META-INF/MANIFEST.MF'
+task fatJar(type: ShadowJar) {
+    destinationDirectory.set(file("$rootDir/lib"))
+    archiveFileName.set('assembler.jar')
+    from sourceSets.main.output
+    configurations = [project.configurations.runtime]
+    manifest {
+        attributes(
+                'Main-Class': 'proguard.Assembler',
+                'Implementation-Version': archiveVersion.get())
+    }
 }
 
-task copyToLib(type: Copy) {
-    from jar
-    from configurations.runtime
-    into 'lib'
-}
-
-assemble.dependsOn copyToLib
+assemble.dependsOn fatJar
 
 distributions {
     main {
         distributionBaseName.set('proguard-assembler')
         contents {
+            into('lib') {
+                from fatJar.outputs
+            }
             into('docs') {
                 from('docs/md') {
                     includeEmptyDirs = false
@@ -62,7 +70,6 @@ distributions {
             }
             from(rootDir) {
                 include 'bin/'
-                include 'lib/'
                 include 'LICENSE'
             }
         }
@@ -141,4 +148,8 @@ signing {
     String password = findProperty('PROGUARD_SIGNING_PASSWORD')
     useInMemoryPgpKeys(key, password)
     sign publishing.publications.proguardAssembler
+}
+
+clean {
+    delete file("$rootDir/lib")
 }
