--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -13,11 +13,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: proguard-assembler
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PROGUARD_GITHUB_TOKEN }}
-          repository: Guardsquare/proguard-core
-          path: proguard-core
       - uses: actions/setup-java@v1
         with:
           java-version: 8
@@ -25,4 +20,4 @@ jobs:
         with:
           build-root-directory: proguard-assembler/
           wrapper-directory: proguard-assembler/
-          arguments: --include-build ../proguard-core/ build
+          arguments: build
