--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,3 @@
-pluginManagement {
-    resolutionStrategy {
-        eachPlugin {
-            if (requested.id.id == 'com.github.johnrengelman.shadow') {
-                useVersion '5.2.0'
-            }
-        }
-    }
-}
-
 rootProject.name = 'proguard-assembler'
+include 'pga-lib'
+include 'pga-cli'
