Publish docs and sources Jar

--- a/pga-lib/build.gradle
+++ b/pga-lib/build.gradle
@@ -9,6 +9,9 @@ java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(8))
     }
+
+    withSourcesJar()
+    withJavadocJar()
 }
 
 dependencies {
