--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import io.github.gradlenexus.publishplugin.NexusRepository
-
 plugins {
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
@@ -19,8 +17,8 @@ subprojects {
 nexusPublishing {
     repositories {
         sonatype {
-            username = findProperty('PROGUARD_STAGING_USERNAME') as NexusRepository
-            password = findProperty('PROGUARD_STAGING_PASSWORD') as NexusRepository
+            username = findProperty('PROGUARD_STAGING_USERNAME')
+            password = findProperty('PROGUARD_STAGING_PASSWORD')
         }
     }
 }
