--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 # Gradle build properties for the ProGuard Assembler and Disassembler.
 
 target = 1.8
+
+kotlinVersion = 1.7.20
+kotlinxMetadataVersion = 0.6.0
