--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
 plugins {
+    id 'distribution'
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+
+    id "org.jetbrains.kotlin.jvm" version "$kotlinVersion" apply false
+    id 'com.adarshr.test-logger' version '3.0.0' apply false
+    id 'de.jansauer.printcoverage' version '2.0.0' apply false
+    id "org.jlleitschuh.gradle.ktlint" version "10.3.0" apply false
+    id "java-test-fixtures"
 }
 
 allprojects {
