--- a/pga-lib/build.gradle
+++ b/pga-lib/build.gradle
@@ -3,6 +3,13 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
+
+    id "org.jetbrains.kotlin.jvm"
+    id 'com.adarshr.test-logger'
+    id 'de.jansauer.printcoverage'
+    id 'jacoco'
+    id "org.jlleitschuh.gradle.ktlint"
+    id "java-test-fixtures"
 }
 
 java {
@@ -16,8 +23,74 @@ java {
 
 dependencies {
     api 'com.guardsquare:proguard-core:9.0.3'
+
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-common:${kotlinVersion}"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-metadata-jvm:${kotlinxMetadataVersion}"
+
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
+    testFixturesImplementation "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
+    testFixturesImplementation group: "dev.zacsweers.kctfork", name: "core", version: "0.2.1"
+    testFixturesImplementation 'io.kotest:kotest-runner-junit5-jvm:5.5.4' // for kotest framework
+    testImplementation 'io.kotest:kotest-runner-junit5-jvm:5.5.4' // for kotest framework
+    testImplementation 'io.kotest:kotest-assertions-core-jvm:5.5.4' // for kotest core jvm assertions
+    testFixturesImplementation 'io.kotest:kotest-assertions-core-jvm:5.5.4' // for kotest core jvm assertions
+
+    testImplementation 'io.kotest:kotest-property-jvm:5.5.4' // for kotest property test
+    testImplementation 'io.kotest:kotest-framework-datatest:5.5.4'
+    testImplementation 'io.mockk:mockk:1.13.3' // for mocking
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0' // for junit framework
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0' // for junit framework
+
+    testFixturesImplementation("com.guardsquare:proguard-assembler:1.0.0")
 }
 
+// Early access automatic downloads are not yet supported:
+// https://github.com/gradle/gradle/issues/14814
+// But it will work if e.g. Java N-ea is pre-installed
+def javaVersionsForTest = 9..19
+
+test {
+    useJUnitPlatform()
+}
+
+task testAllJavaVersions() { testAllTask ->
+    dependsOn(test) // the usual test runs on Java 8
+
+    javaVersionsForTest.each {version ->
+
+        task("testJava$version", type: Test) {
+
+            // The version of bytebuddy used by mockk only supports Java 20 experimentally so far
+            if (version == 20) systemProperty 'net.bytebuddy.experimental', true
+
+            useJUnitPlatform()
+
+            testAllTask.dependsOn(it)
+
+            javaLauncher = javaToolchains.launcherFor {
+                languageVersion = JavaLanguageVersion.of(version)
+            }
+        }
+    }
+}
+
+jacocoTestReport {
+    // Define which classes need to be monitored
+    def sources = files(sourceSets.main.allSource.srcDirs)
+    sourceDirectories.setFrom(sources)
+    additionalSourceDirs.setFrom(sources)
+    sourceDirectories.setFrom(sources)
+    def classes = files(sourceSets.main.output.classesDirs)
+    classDirectories.setFrom(classes)
+    executionData.setFrom project.fileTree(dir: '.', include: '**/build/jacoco/*.exec')
+    reports {
+        xml.enabled = true
+        csv.enabled = false
+        html.destination file("${buildDir}/reports/coverage")
+    }
+}
 
 publishing {
     publications {
