deps: copy proguard dependencies and update to the latest version

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,6 @@
 
 target = 1.8
 
-kotlinVersion = 1.7.20
-kotlinxMetadataVersion = 0.6.0
+kotlinVersion = 1.9.0
+kotestVersion = 5.6.2
+proguardCoreVersion = 9.0.9
