deps: minor root build.gradle cleanup

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
-plugins {
-    id 'distribution'
-    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+import io.github.gradlenexus.publishplugin.NexusRepository
 
+plugins {
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
     id "org.jetbrains.kotlin.jvm" version "$kotlinVersion" apply false
     id 'com.adarshr.test-logger' version '3.2.0' apply false
     id "org.jlleitschuh.gradle.ktlint" version "10.3.0" apply false
@@ -23,8 +23,8 @@ subprojects {
 nexusPublishing {
     repositories {
         sonatype {
-            username = findProperty('PROGUARD_STAGING_USERNAME')
-            password = findProperty('PROGUARD_STAGING_PASSWORD')
+            username = findProperty('PROGUARD_STAGING_USERNAME') as NexusRepository
+            password = findProperty('PROGUARD_STAGING_PASSWORD') as NexusRepository
         }
     }
 }
