--- a/pga-lib/build.gradle
+++ b/pga-lib/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'java'
-    id 'java-library'
-    id 'maven-publish'
-    id 'signing'
+    id "java"
+    id "java-library"
+    id "maven-publish"
+    id "signing"
 
     id "org.jetbrains.kotlin.jvm" version "$kotlinVersion"
-    id 'com.adarshr.test-logger'
-    id 'jacoco'
+    id "com.adarshr.test-logger"
+    id "jacoco"
     id "org.jlleitschuh.gradle.ktlint"
     id "java-test-fixtures"
 }
@@ -25,14 +25,14 @@ dependencies {
 
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
-    testImplementation 'dev.zacsweers.kctfork:core:0.3.0'
+    testImplementation "dev.zacsweers.kctfork:core:0.3.0"
     testImplementation "io.kotest:kotest-runner-junit5-jvm:$kotestVersion" // for kotest framework
     testImplementation "io.kotest:kotest-assertions-core-jvm:$kotestVersion" // for kotest core jvm assertions
     testImplementation "io.kotest:kotest-property-jvm:$kotestVersion" // for kotest property test
-    testImplementation 'io.mockk:mockk:1.13.5' // for mocking
+    testImplementation "io.mockk:mockk:1.13.5" // for mocking
 
     testImplementation(testFixtures("com.guardsquare:proguard-core:${proguardCoreVersion}")) {
-        exclude group: 'com.guardsquare', module: 'proguard-core'
+        exclude group: "com.guardsquare", module: "proguard-core"
     }
 }
 
@@ -53,7 +53,7 @@ jacocoTestReport {
     sourceDirectories.setFrom(sources)
     def classes = files(sourceSets.main.output.classesDirs)
     classDirectories.setFrom(classes)
-    executionData.setFrom project.fileTree(dir: '.', include: '**/build/jacoco/*.exec')
+    executionData.setFrom project.fileTree(dir: ".", include: "**/build/jacoco/*.exec")
     reports {
         xml.required = true
         csv.required = true
@@ -64,47 +64,47 @@ jacocoTestReport {
 publishing {
     publications {
         mavenJava(MavenPublication) { publication ->
-            groupId = 'com.guardsquare'
-            artifactId = 'proguard-assembler'
+            groupId = "com.guardsquare"
+            artifactId = "proguard-assembler"
             version = version
             pom {
                 name = "ProGuard Assembler and Disassembler"
-                description = 'The ProGuard Assembler and Disassembler can assemble and disassemble Java class files.'
+                description = "The ProGuard Assembler and Disassembler can assemble and disassemble Java class files."
                 url = "https://github.com/Guardsquare/kotlin-metadata-printer"
                 licenses {
                     license {
-                        name = 'Apache License Version 2.0'
-                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
-                        distribution = 'repo'
+                        name = "Apache License Version 2.0"
+                        url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
+                        distribution = "repo"
                     }
                 }
                 issueManagement {
-                    system = 'Github Tracker'
-                    url = 'https://github.com/Guardsquare/proguard-assembler/issues'
+                    system = "Github Tracker"
+                    url = "https://github.com/Guardsquare/proguard-assembler/issues"
                 }
                 scm {
-                    url = 'https://github.com/Guardsquare/proguard-assembler.git'
-                    connection = 'scm:git:https://github.com/Guardsquare/proguard-assembler.git'
+                    url = "https://github.com/Guardsquare/proguard-assembler.git"
+                    connection = "scm:git:https://github.com/Guardsquare/proguard-assembler.git"
                 }
                 developers {
                     developer {
-                        id = 'james.hamilton'
-                        name = 'James Hamilton'
-                        organization = 'Guardsquare'
-                        organizationUrl = 'https://www.guardsquare.com/'
-                        roles = ['Project Administrator', 'Developer']
+                        id = "james.hamilton"
+                        name = "James Hamilton"
+                        organization = "Guardsquare"
+                        organizationUrl = "https://www.guardsquare.com/"
+                        roles = ["Project Administrator", "Developer"]
                     }
                 }
             }
 
             from components.java
 
-            if (project.hasProperty('PROGUARD_SIGNING_KEY')) {
+            if (project.hasProperty("PROGUARD_SIGNING_KEY")) {
                 // We use in-memory ascii-armored keys
                 // See https://docs.gradle.org/current/userguide/signing_plugin.html#sec:in-memory-keys
                 signing {
-                    String key = project.findProperty('PROGUARD_SIGNING_KEY')
-                    String password = project.findProperty('PROGUARD_SIGNING_PASSWORD')
+                    String key = project.findProperty("PROGUARD_SIGNING_KEY")
+                    String password = project.findProperty("PROGUARD_SIGNING_PASSWORD")
                     useInMemoryPgpKeys(key, password)
                     sign publication
                 }
