Add testing infrastructure (#12)
Co-authored-by: Jitse De Smet <jitse@reedonk8.be>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 # Gradle build properties for the ProGuard Assembler and Disassembler.
 
 target = 1.8
+
+kotlinVersion = 1.9.0
+kotestVersion = 5.6.2
+proguardCoreVersion = 9.0.9
