Add foojay resolver

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
+}
+
+
 rootProject.name = 'proguard-assembler'
 include 'pga-lib'
 include 'pga-cli'
